--- a/menu.html
+++ b/menu.html
@@ -149,42 +149,61 @@
             <div class="textCardContent">
               <h5>Los Viernes en la Frescor...</h5>
             <p><span id="arrozalhorno2">Arroz al horno</span> <br>
-              <span id="fideuaboletus">Paella de pollo, conejo y albóndigas</span><br>
-              <span id="lasagna">Fideuà marinera con verduras"</span><br>
-              <span id="traserospollo">Espaguetis con bacon, york y salsa de champiñones</span><br>
-              <span id="espiralesverdura">Filete de limanda gratinado con queso y cebollino</span><br>
-              <span id="rape">Cinta de lomo con salsa argentina</span><br>
-              <span id="ensalada2">Ensalada de la casa</span>
+              <span id="paellalbon2">Paella de pollo, conejo y albóndigas</span><br>
+              <span id="fideuaverdu">Fideuà marinera con verduras"</span><br>
+              <span id="espaguetis">Espaguetis con bacon, york y salsa de champiñones</span><br>
+              <span id="limanda">Filete de limanda gratinado con queso y cebollino</span><br>
+              <span id="lomo">Cinta de lomo con salsa argentina</span><br>
+              <span id="ensalada3">Ensalada de la casa</span>
             </p>
             </div>
             <div>
-              <img id="arrozalhorno2img" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
-              <img id="fideuaboletusimg" class="imgCardContent"  src="/img/fideuaboletus.jfif" alt="capture" style="display: none;">
-              <img id="lasagnaimg" class="imgCardContent"  src="/img/lasagna.jpg" alt="capture" style="display: none;">
-              <img id="traserospolloimg" class="imgCardContent"  src="/img/traserospollo.jfif" alt="capture" style="display: none;">
-              <img id="espiralesverduraimg" class="imgCardContent"  src="/img/espiverdura.jfif" alt="capture" style="display: none;">
-              <img id="rapeimg" class="imgCardContent"  src="/img/rape.jpg" alt="capture" style="display: none;">
-              <img id="ensalada2img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+              <img id="arrozalhorno2img" class="imgCardContent"  src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
+              <img id="paellalbon2img" class="imgCardContent"  src="/img/paellaalbon.jpg" alt="capture" style="display: none;">
+              <img id="fideuaverduimg" class="imgCardContent"  src="/img/fideuaverdu.jfif" alt="capture" style="display: none;">
+              <img id="espaguetisimg" class="imgCardContent"  src="/img/espaguetis.jfif" alt="capture" style="display: none;">
+              <img id="limandaimg" class="imgCardContent"  src="/img/limanda.jfif" alt="capture" style="display: none;">
+              <img id="lomoimg" class="imgCardContent"  src="/img/lomo.jfif" alt="capture" style="display: none;">
+              <img id="ensalada3img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
         </div>
       </div>
       <div class="collapse" id="sabado">
-        <div class="card card-body">
-          <h5>Los Sábados en la Frescor...</h5>
-          <p>Paella Valenciana <br>
-            Paella de verduras con escarola fresca<br>
-            Fideuà de chipirones y alcachofas<br>
-            Arroz "Del Senyoret"<br>
-            Caracolas a los cuatro quesos<br>
-            Lasaña de carne<br>
-            Crepe de salmón<br>
-            Traseros de pollo con salsa teriyaki<br>
-            Confit de pato con confitura de fresas<br>
-            Bombas de carne<br>
-            Ensaladilla rusa<br>
-            Ensalada de la casa
-          </p>
+        <div class="card card-body ">
+          <div class="cardContent d-flex">
+            <div class="textCardContent">
+              <h5>Los Sábados en la Frescor...</h5>
+            <p><span id="paellaval2">Paella Valenciana</span> <br>
+              <span id="paellaverdu">Paella de verduras con escarola fresca</span><br>
+              <span id="fideuachipi">Fideuà de chipirones y alcachofas"</span><br>
+              <span id="arrozsenyo">Arroz "Del Senyoret"</span><br>
+              <span id="caracolas">Caracolas a los cuatro quesos</span><br>
+              <span id="lasagna2">Lasaña de carne</span><br>
+              <span id="crepesalmon">Crepe de salmón</span><br>
+              <span id="polloteri">Traseros de pollo con salsa teriyaki</span><br>
+              <span id="confitpato">Confit de pato con confitura de fresas</span><br>
+              <span id="bombascarne">Bombas de carne</span><br>
+              <span id="ensaladilla">Ensaladilla rusa</span><br>
+              <span id="ensalada4">Ensalada de la casa</span>
+
+            </p>
+            </div>
+            <div>
+              <img id="paellaval2img" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="paellaverduimg" class="imgCardContent"  src="/img/paellaverduras.jpg" alt="capture" style="display: none;">
+              <img id="fideuachipiimg" class="imgCardContent"  src="/img/fideuachipi.jfif" alt="capture" style="display: none;">
+              <img id="arrozsenyoimg" class="imgCardContent"  src="/img/arrozsenyoret.JPG" alt="capture" style="display: none;">
+              <img id="caracolasimg" class="imgCardContent"  src="/img/caracolas.jfif" alt="capture" style="display: none;">
+              <img id="lasagna2img" class="imgCardContent"  src="/img/lasagna.jpg" alt="capture" style="display: none;">
+              <img id="crepesalmonimg" class="imgCardContent"  src="/img/crepesalmon.jfif" alt="capture" style="display: none;">
+              <img id="polloteriimg" class="imgCardContent"  src="/img/poyoteri.jfif" alt="capture" style="display: none;">
+              <img id="confitpatoimg" class="imgCardContent"  src="/img/confitpato.jfif" alt="capture" style="display: none;">
+              <img id="bombascarneimg" class="imgCardContent"  src="/img/bombascarne.jfif" alt="capture" style="display: none;">
+              <img id="ensaladillaimg" class="imgCardContent"  src="/img/esaladilla.jfif" alt="capture" style="display: none;">              
+              <img id="ensalada4img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+            </div>
+          </div>
         </div>
       </div>
     </div>
